# odoo-forge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  odooforge-architecture-v2.md  odooforge-v2.1-addendum.md  pyproject.toml
.claude/agents/: odoo-analyst.md  odoo-executor.md
.claude/skills/odoo-report/: SKILL.md
.github/workflows/: publish.yml
docker/: docker-compose.yml
docs/: architecture.md  configuration.md  contributing.md  getting-started.md  recipes.md
docs/plans/: 2026-02-17-lovable-for-odoo-design.md  2026-02-17-lovable-for-odoo-phase1.md  2026-02-18-odooforge-plugin-architecture.md  2026-02-18-plugin-phase1-subagents-skills.md
docs/tools/: automation.md  codegen.md  database.md  diagnostics.md  email.md  imports.md  instance.md  knowledge.md  models.md  modules.md  network.md  overview.md  planning.md  recipes.md  records.md  reports.md  schema.md  settings.md  snapshots.md  views.md  workflows.md
scripts/: verify_release.py
src/odooforge/: __init__.py  cli.py  config.py  init.py  server.py
src/odooforge/codegen/: __init__.py  addon_builder.py  manifest_gen.py  model_gen.py  security_gen.py  view_gen.py
src/odooforge/connections/: docker_client.py  pg_client.py  xmlrpc_client.py
src/odooforge/data/: .env.example  docker-compose.yml  odoo.conf
src/odooforge/data/agents/: odoo-explorer.md  odoo-reviewer.md
src/odooforge/data/skills/: odoo-architect.md  odoo-debug.md
src/odooforge/data/skills/odoo-brainstorm/: SKILL.md
src/odooforge/data/skills/odoo-data/: SKILL.md
src/odooforge/data/skills/odoo-setup/: SKILL.md
src/odooforge/knowledge/: __init__.py  best_practices.py  dictionary.py  modules.py  patterns.py
src/odooforge/knowledge/blueprints/: __init__.py  bakery.py  ecommerce.py  education.py  healthcare.py  manufacturing.py  real_estate.py  restaurant.py  retail.py  services.py
src/odooforge/planning/: __init__.py  plan_validator.py  requirement_parser.py  solution_designer.py
src/odooforge/tools/: automation.py  codegen.py  database.py  diagnostics.py  email.py  imports.py  instance.py  knowledge.py  models.py  modules.py  network.py  planning.py  recipes.py  records.py  reports.py  schema.py  settings.py  snapshots.py  views.py  workflows.py
src/odooforge/utils/: binary_handler.py  errors.py  formatting.py  qweb_builder.py  response_formatter.py  validators.py  xpath_builder.py
src/odooforge/verification/: state_cache.py  verify_automation.py  verify_install.py  verify_report.py  verify_view.py
src/odooforge/workflows/: __init__.py  create_dashboard.py  create_feature.py  setup_business.py  setup_integration.py
tests/: test_codegen.py  test_config.py  test_docker.py  test_edge_cases.py  test_init.py  test_knowledge_base.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_planning.py  test_server.py  test_state_cache.py  test_tools.py  test_utils.py  test_workflows.py  test_xmlrpc.py
