[project]
name = "odooforge"
version = "0.1.0"
description = "AI-First ERP Configuration Engine — MCP server for Odoo 18"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "OdooForge" }]
keywords = ["odoo", "erp", "mcp", "ai", "automation", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "asyncpg>=0.30.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/odooforge/odooforge"
Documentation = "https://github.com/odooforge/odooforge#readme"
Repository = "https://github.com/odooforge/odooforge"
Issues = "https://github.com/odooforge/odooforge/issues"

[project.scripts]
odooforge = "odooforge.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/odooforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]
