[project]
name = "odooforge"
version = "0.2.1"
description = "AI-First ERP Configuration Engine for Odoo 18 — CLI toolkit + MCP server"
readme = "README.md"
license = { text = "AGPL-3.0+" }
requires-python = ">=3.11"
authors = [{ name = "hamzatrq" }]
keywords = ["odoo", "erp", "mcp", "ai", "automation", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "asyncpg>=0.30.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/hamzatrq/odoo-forge"
Documentation = "https://github.com/hamzatrq/odoo-forge#readme"
Repository = "https://github.com/hamzatrq/odoo-forge"
Issues = "https://github.com/hamzatrq/odoo-forge/issues"

[project.scripts]
odooforge = "odooforge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/odooforge"]
include = ["src/odooforge/data/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]
